--- a/src/components/UserPage/UserPage.css
+++ b/src/components/UserPage/UserPage.css
@@ -3,6 +3,10 @@
   margin: 0 40px;
 }
 
+.user__wrapper {
+  text-align: center;
+}
+
 .user-page {
   display: flex;
   flex-direction: column;
@@ -45,4 +49,17 @@
 
 .user__followers {
   width: 100%;
+}
+
+.user__button {
+  position: absolute;
+  right: 100px;
+  top: 20px;
+}
+
+.logout-button {
+  cursor: pointer;
+  padding: 10px;
+  font-weight: 600;
+  font-size: 1rem;
 }
