--- a/src/components/UserPage/UserPage.css
+++ b/src/components/UserPage/UserPage.css
@@ -1,6 +1,13 @@
 .user-container {
   width: 100%;
   margin: 0 40px;
+  text-align: center;
+}
+.user__error {
+  color: red;
+  text-transform: uppercase;
+  text-align: center;
+  margin: 50px 0;
 }
 
 .user__wrapper {
